@@ -39,8 +39,21 @@
 
 #define finline __inline__
 
-typedef unsigned __int64 __uint64;
-typedef unsigned __int32 __uint32;
+// default 64bit type
+typedef int64_t __int64;
+typedef uint64_t __uint64;
+
+// default 32bit type
+typedef int32_t __int32;
+typedef uint32_t __uint32;
+
+// default 16bit type
+typedef int16_t __int16;
+typedef uint16_t __uint16;
+
+// default 8bit type
+typedef int8_t __int8;
+typedef uint8_t __uint8;
 
 //define SEQAN_SWITCH_USE_FORWARDS to use generated forwards 
 #define SEQAN_SWITCH_USE_FORWARDS
